# roocs-grids

./: .pre-commit-config.yaml  AUTHORS.rst  HISTORY.rst  LICENSE  MANIFEST.in  README.md  README.rst  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py
.github/workflows/: main.yml
aux/: create_grid_file.py
roocs_grids/: __init__.py
roocs_grids/grids/: cmip6_145x288_scrip.20181001.nc  cmip6_720x1440_scrip.20181001.nc  cmip6_721x1440_scrip.20181001.nc  cmip6_72x144_scrip.20181001.nc  grid_T127_lsm_binary.nc  grid_T255.nc  grid_T31.nc  grid_T42.nc  grid_T63_lsm_binary.nc  land_sea_mask_025degree_ERA5.nc  land_sea_mask_025degree_binary.nc4  land_sea_mask_05degree.nc4  land_sea_mask_1degree.nc4  land_sea_mask_1degree_binary.nc4  land_sea_mask_2degree.nc4  land_sea_mask_2degree_binary.nc4
roocs_grids/scripts/: Create_grid_file.py  retrieve_grids.sh
scripts/: retrieve_grids.sh
tests/: test_roocs_grids.py
